Taxonomy: re-named "civic-interests" to "interests". Web App and Selector UI: some changes attempting to resolve why interests are not showing up in the selector.

--- a/components/project-list/css/style.css
+++ b/components/project-list/css/style.css
@@ -98,4 +98,5 @@
     font-family: sans-serif;
     color: white;
     border-radius: 3px;
+    cursor: pointer;
 }
